--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+}
+
+
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
     background-image: url("images/table.png");
@@ -5,6 +10,7 @@ body {
     font-weight: bold;
     color: white;
     text-align: center;
+    width: 100%;
 }
 
 h1 {
